# cinder

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build_package.py  complete_dashboard.py  horrible.py  package-lock.json  package.json  pyproject.toml  requirements.txt  saved_model_code.py  setup.py  standalone_server.py  test_api_key.py  test_api_validation.py  try.py
backend/: .env.example  __init__.py  api.py
backend/app/: cli.py  server.py
backend/app/static/: asset-manifest.json  index.html
backend/app/static/static/css/: main.1c5df535.css.map  main.1f6e5c75.css.map  main.22533b4e.css.map  main.5cf47b99.css.map  main.5ecc8e9d.css.map  main.84870a85.css.map  main.e2910454.css.map  main.ea1cb791.css.map
backend/app/static/static/js/: main.01e0e287.js  main.03a91be9.js  main.1e96ca97.js.map  main.21d7db5e.js  main.21d7db5e.js.map  main.351684ca.js  main.351684ca.js.map  main.36294ce8.js  main.36294ce8.js.map  main.36c0c139.js  main.36c0c139.js.map  main.392af42a.js  main.392af42a.js.map  main.3979d7de.js  main.3b330f31.js  main.3b330f31.js.map  main.3cbc9568.js  main.3cbc9568.js.map  main.4592fb24.js  main.45ed1b24.js  main.45ed1b24.js.map  main.4c79c613.js.map  main.54f22f26.js  main.54f22f26.js.map  main.568bdf61.js  main.5dd013a7.js.map  main.6a2e61b5.js  main.6a2e61b5.js.map  main.6bfcd6c1.js  main.6ca1a09b.js  main.6ca1a09b.js.map  main.7a265116.js  main.7a265116.js.map  main.8cb5ebfd.js  main.8cb5ebfd.js.map  main.9223368d.js  main.93c91019.js  main.9dc48be8.js.map  main.b9990f24.js  main.b9990f24.js.map  (+11 more)
backend/ml_analysis/: bit_assistant.py  code_generator.py
backend/model_interface/: connector.py
backend/visualizers/: __init__.py  calibration.py  confusion_matrix.py  decision_boundary.py  feature_visualizer.py  prediction_explainer.py
benchmarks/: matrix_multiply.c
cinder/: README.md  __init__.py  setup.py
cinder/app/: server.py
cinder/cinder/app/: server.py
cinder/cinder/model_interface/: connector.py
cinder_ml.egg-info/: PKG-INFO  SOURCES.txt
data/: model.pkl
examples/: churn.py  example.py  high_variance.py  mnist_demo.py  run_2_demo.py  run_server.py  scikit_demo.py  simple_example_local.py  tabular_demo.py  tensorflow_demo.py
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  brand.html  index.css  index.js  styles.css
frontend/src/components/: AccuracyGauge.js  BitAutoOptimizer.css  BitAutoOptimizer.js  BitChatInterface.js  BitOptimizerStateManager.js  CladoStyleAIAgent.css  CladoStyleAIAgent.js  ClaudeLayout.js  CodeEditor.js  CompileMLDashboard.js  ConfusionMatrix.js  ConnectionSettings.js  Dashboard.js  DashboardContent.js  DashboardLayout.js  EnhancedPredictionDistribution.css  EnhancedPredictionDistribution.js  ErrorAnalysis.css  ErrorAnalysis.js  ErrorDistribution.js  FeatureImportance3D.js  Header.css  Header.js  MLFlowChart.js  MinimalIcons.js  ModelComparison.js  ModelDetails.js  ModelImprovementFlowchart.js  ModelImprovementSuggestions.css  ModelImprovementSuggestions.js  ModelInfoCard.css  ModelInfoCard.js  PredictHistogram.js  TestAICodeEditor.js  card.css  dashboard.css
frontend/src/layout/: DashboardLayout.js
frontend/src/services/: api.js
frontend/src/styles/: global.css  variables.css
scripts/: clang-ml.in
src/compiler/: CMakeLists.txt  FeatureExtractor.cpp  OptimizationPass.cpp
src/ml/: bandit_model.py  predict_optimization.py
static/static/js/: main.4c79c613.js
