[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-dashboard"
version = "0.1.0"
authors = [
  { name = "Rahul Thennarasu", email = "rahulthennarasu07@gmail.com" },
]
description = "A machine learning model analysis dashboard with AI assistant"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.15.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pytorch = ["torch>=1.12.0"]
tensorflow = ["tensorflow>=2.8.0"]
all = [
    "torch>=1.12.0",
    "tensorflow>=2.8.0",
    "google-generativeai>=0.1.0"
]

[project.urls]
"Homepage" = "https://github.com/RahulThennarasu/ml-dashboard"
"Bug Tracker" = "https://github.com/RahulThennarasu/ml-dashboard/issues"

[project.scripts]
ml-dashboard = "backend.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
only-packages = true

[tool.hatch.build.targets.sdist]
include = [
    "backend",
    "LICENSE",
    "README.md",
    "MANIFEST.in",
]